@@ -1,0 +1,3 @@
+import { Userbar } from '../../includes/userbar';
+
+customElements.define('wagtail-userbar', Userbar);
