@@ -57,6 +57,7 @@ depth: 1
  * Rename the Stimulus `AutoFieldController` to the less confusing `SubmitController` (Loveth Omokaro)
  * Replace `script` tags with `template` tag for image/document bulk uploads (Rishabh Kumar Bahukhandi)
  * Remove unneeded float styles on 404 page (Fabien Le Frapper)
+ * Convert userbar implementation to TypeScript (Albina Starykova)
 
 ## Upgrade considerations
 
