@@ -38,6 +38,7 @@ Changelog
  * Maintenance: Rename the Stimulus `AutoFieldController` to the less confusing `SubmitController` (Loveth Omokaro)
  * Maintenance: Replace `script` tags with `template` tag for image/document bulk uploads (Rishabh Kumar Bahukhandi)
  * Maintenance: Remove unneeded float styles on 404 page (Fabien Le Frapper)
+ * Maintenance: Convert userbar implementation to TypeScript (Albina Starykova)
 
 
 4.2.1 (xx.xx.xxxx) - IN DEVELOPMENT
